--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,9 @@
 unbind C-b
 set -g prefix C-a
 
+
+
+
 # force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf
@@ -18,3 +21,21 @@ set -g status-utf8 on
 
 
 set-window-option -g window-status-current-bg white
+
+# Bind pane switching to VIM style keys
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+
+# Bind arrow keys to resize windows
+unbind Left
+unbind Down
+unbind Up
+unbind Right
+
+bind Left resize-pane -L 
+bind Down resize-pane -D 
+bind Up resize-pane -U 
+bind Right resize-pane -R 
