--- a/tmux.conf
+++ b/tmux.conf
@@ -47,3 +47,20 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+# bind j select-pane -D
+# bind k select-pane -U
+# bind h select-pane -L
+# bind l select-pane -R
+# 
+# bind | split-window -h
+# bind - split-window -v
+# 
+# bind -r J resize-pane -D 5
+# bind -r K resize-pane -U 5
+# bind -r H resize-pane -L 5
+# bind -r L resize-pane -R 5
+# 
+# set -g pane-border-fg white
+# set -g pane-active-border-fg cyan
+# set -g pane-active-border-bg cyan
