--- a/tmux.conf
+++ b/tmux.conf
@@ -16,8 +16,8 @@ set-window-option -g pane-base-index 1
 set -g default-terminal "screen-256color"
 
 # work with unicode in the display window as well as in the status bar
-setw -g utf8 on
-set -g status-utf8 on
+# setw -g utf8 on
+# set -g status-utf8 on
 
 
 set-window-option -g window-status-current-bg white
@@ -64,3 +64,7 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 # set -g pane-border-fg white
 # set -g pane-active-border-fg cyan
 # set -g pane-active-border-bg cyan
+
+# gets clipboard working in OSX Sierra
+set -g default-shell $SHELL 
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
