--- a/tmuxinator/bit.yml
+++ b/tmuxinator/bit.yml
@@ -1,16 +1,19 @@
-# ~/.tmuxinator/lf.yml
+# ~/.tmuxinator/memo.yml
 
-name: lf
-root: ~/workspace
+name: bit
+root: ~/
 
 # Optional tmux socket
 # socket_name: foo
 
 # Runs before everything. Use it to start daemons etc.
-pre: pkill postgres 
+# pre: sudo /etc/rc.d/mysqld start
+pre: pkill postgres
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
 # pre_window: rbenv shell 2.0.0-p247
+
+pre_window: cd ~/workspace/magnetissimo
 
 # Pass command line options to tmux. Useful for specifying a different tmux.conf.
 # tmux_options: -f ~/.tmux.mac.conf
@@ -28,40 +31,13 @@ pre: pkill postgres
 # attach: false
 
 # Runs after everything. Use it to attach to tmux with custom options etc.
-# post: tmux -CC attach -t lf
-post: pkill postgres 
+# post: tmux -CC attach -t memo
+post: pkill postgres
 
 windows:
-  - lift: 
-      - cd lift
-  - lift-admin: 
-      - cd lift-admin
-  - partner: 
-      - cd partner
-  - api: 
-      - cd api
-  - console:
-      - cd api
-      - rails c
-  - servers:
-      layout: tiled
-      panes:
-        - lift:
-            - cd lift
-            - ember server --proxy=http://localhost:3000
-        - lift-admin:
-            - cd lift-admin
-            - ember server --proxy=http://localhost:3000
-        - partner:
-            - cd partner
-            - ember server --proxy=http://localhost:3000
-        - pg:
-            - cd api
-            - postgres -D vendor/postgresql
-        - api:
-            - cd api
-            - rabbitmq-server -detached
-            - bundle exec foreman start
-  - logs: 
-      - cd api
-      - tail -f log/development.log
+  - vim: 
+      - mix phoenix.server
+      - vim .
+  - server: mix phoenix.server
+
+
