--- a/tmuxinator/meo.yml
+++ b/tmuxinator/meo.yml
@@ -1,13 +1,13 @@
-# ~/.tmuxinator/lf.yml
+# ~/.tmuxinator/meo.yml
 
-name: lf
-root: ~/workspace
+name: meo
+root: ~/
 
 # Optional tmux socket
 # socket_name: foo
 
 # Runs before everything. Use it to start daemons etc.
-pre: pkill postgres 
+# pre: sudo /etc/rc.d/mysqld start
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
 # pre_window: rbenv shell 2.0.0-p247
@@ -28,40 +28,16 @@ pre: pkill postgres
 # attach: false
 
 # Runs after everything. Use it to attach to tmux with custom options etc.
-# post: tmux -CC attach -t lf
-post: pkill postgres 
+# post: tmux -CC attach -t meo
 
 windows:
-  - lift: 
-      - cd lift
-  - lift-admin: 
-      - cd lift-admin
-  - partner: 
-      - cd partner
-  - api: 
-      - cd api
-  - console:
-      - cd api
-      - rails c
-  - servers:
-      layout: tiled
+  - editor:
+      layout: main-vertical
+      # Synchronize all panes of this window, can be enabled before or after the pane commands run.
+      # 'before' represents legacy functionality and will be deprecated in a future release, in favour of 'after'
+      # synchronize: after
       panes:
-        - lift:
-            - cd lift
-            - ember server --proxy=http://localhost:3000
-        - lift-admin:
-            - cd lift-admin
-            - ember server --proxy=http://localhost:3000
-        - partner:
-            - cd partner
-            - ember server --proxy=http://localhost:3000
-        - pg:
-            - cd api
-            - postgres -D vendor/postgresql
-        - api:
-            - cd api
-            - rabbitmq-server -detached
-            - bundle exec foreman start
-  - logs: 
-      - cd api
-      - tail -f log/development.log
+        - vim
+        - guard
+  - server: bundle exec rails s
+  - logs: tail -f log/development.log
