--- a/tmuxinator/bit.yml
+++ b/tmuxinator/bit.yml
@@ -36,8 +36,9 @@ post: pkill postgres
 
 windows:
   - vim: 
-      - mix phoenix.server
       - vim .
-  - server: mix phoenix.server
+  - server: 
+      - open http://localhost:4000/
+      - mix phoenix.server
 
 
