add vim style copy paste

--- a/tmux.conf
+++ b/tmux.conf
@@ -68,3 +68,11 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 # gets clipboard working in OSX Sierra
 set -g default-shell $SHELL 
 set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+
+# mimics vim copy paste
+bind P paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'r' rectangle-toggle
+
+
