--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,15 @@
 unbind C-b
 set -g prefix C-a
 
+# start window numbering at 1 for easier switching
+set -g base-index 1
+set-window-option -g pane-base-index 1
 
+# Make inactive-windows dim
+set -g window-style 'fg=colour247,bg=colour236'
+set -g window-active-style 'fg=colour250,bg=black'
 
+# set-hook -g client-session-changed 'set -g status-style "fg=red"'
 
 # force a reload of the config file
 unbind r
@@ -40,6 +47,14 @@ bind Down resize-pane -D
 bind Up resize-pane -U 
 bind Right resize-pane -R 
 
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'jimeh/tmux-themepack'
+# set -g @themepack 'block/magenta'
+
+
 # Smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
@@ -76,3 +91,6 @@ bind-key -t vi-copy 'y' copy-selection
 bind-key -t vi-copy 'r' rectangle-toggle
 
 
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+set -g default-command "reattach-to-user-namespace -l /bin/zsh"
