--- a/tmux.conf
+++ b/tmux.conf
@@ -81,16 +81,16 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 # set -g pane-active-border-bg cyan
 
 # gets clipboard working in OSX Sierra
-set -g default-shell $SHELL 
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+# set -g default-shell $SHELL 
+# set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 # mimics vim copy paste
 bind P paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-bind-key -t vi-copy 'r' rectangle-toggle
+# bind-key -t vi-copy 'v' begin-selection
+# bind-key -t vi-copy 'y' copy-selection
+# bind-key -t vi-copy 'r' rectangle-toggle
 
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+# set -g default-command "reattach-to-user-namespace -l /bin/zsh"
