--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -663,6 +663,8 @@
 	<integer>524288</integer>
 	<key>LoadPrefsFromCustomFolder</key>
 	<true/>
+	<key>NSFontPanelAttributes</key>
+	<string>1, 1</string>
 	<key>NSNavLastRootDirectory</key>
 	<string>~/Documents</string>
 	<key>NSNavPanelExpandedSizeForOpenMode</key>
@@ -703,10 +705,20 @@
 		<key>TB Is Shown</key>
 		<integer>1</integer>
 	</dict>
+	<key>NSWindow Frame NSFontPanel</key>
+	<string>315 183 695 414 0 0 1280 777 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>277 276 796 473 0 0 1280 777 </string>
+	<string>277 348 918 401 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>10 63 1214 714 0 0 1280 777 </string>
+	<string>0 74 1277 703 0 0 1280 777 </string>
+	<key>NSWindow Frame iTerm Window 1</key>
+	<string>34 178 710 599 0 0 1280 777 </string>
+	<key>NSWindow Frame iTerm Window 2</key>
+	<string>190 68 976 709 0 0 1280 777 </string>
+	<key>NSWindow Frame iTerm Window 3</key>
+	<string>272 246 570 352 0 0 1280 777 </string>
+	<key>NSWindow Frame iTerm Window 4</key>
+	<string>426 336 570 352 0 0 1280 777 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -1275,7 +1287,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>InputMono-Light 14</string>
+			<string>Hack-Regular 11</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
@@ -2048,13 +2060,15 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2018-05-28T02:00:48Z</date>
+	<date>2018-05-29T11:32:47Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>URLHandlersByGuid</key>
 	<dict/>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
+	<key>findMode_iTerm</key>
+	<integer>0</integer>
 	<key>iTerm Version</key>
 	<string>3.1.6</string>
 </dict>
