--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -709,16 +709,18 @@
 	</dict>
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>315 183 695 414 0 0 1280 777 </string>
+	<key>NSWindow Frame SUAutomaticUpdateAlert</key>
+	<string>332 452 616 174 0 0 1280 777 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
 	<string>330 288 620 392 0 0 1280 777 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>277 348 918 401 0 0 1280 777 </string>
+	<string>277 263 796 486 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 0 1280 777 0 0 1280 777 </string>
+	<string>0 448 1280 329 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>514 365 570 352 0 0 1280 777 </string>
+	<string>0 14 1273 763 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
-	<string>0 419 570 352 0 0 1280 777 </string>
+	<string>0 419 585 352 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 3</key>
 	<string>329 410 570 352 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 4</key>
@@ -2012,6 +2014,8 @@
 			<string>/Users/mpg</string>
 		</dict>
 	</array>
+	<key>NoSyncHaveRequestedFullDiskAccess</key>
+	<true/>
 	<key>NoSyncHaveWarnedAboutPasteConfirmationChange</key>
 	<true/>
 	<key>NoSyncInstallationId</key>
@@ -2022,6 +2026,10 @@
 	<real>549164650.970788</real>
 	<key>OpenTmuxWindowsIn</key>
 	<integer>0</integer>
+	<key>PMPrintingExpandedStateForPrint2</key>
+	<false/>
+	<key>PasteTabToStringTabStopSize</key>
+	<integer>2</integer>
 	<key>PointerActions</key>
 	<dict>
 		<key>Button,1,1,,</key>
@@ -2057,6 +2065,10 @@
 	</dict>
 	<key>PrefsCustomFolder</key>
 	<string>/Users/franco/.dotfiles/iterm2</string>
+	<key>Print In Black And White</key>
+	<true/>
+	<key>SUAutomaticallyUpdate</key>
+	<true/>
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
 	<key>SUFeedAlternateAppNameKey</key>
@@ -2066,7 +2078,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2018-08-05T04:40:54Z</date>
+	<date>2019-03-05T18:26:18Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>URLHandlersByGuid</key>
@@ -2076,6 +2088,6 @@
 	<key>findMode_iTerm</key>
 	<integer>0</integer>
 	<key>iTerm Version</key>
-	<string>3.1.6</string>
+	<string>3.2.5</string>
 </dict>
 </plist>
