fix line to new Tmux will launch

--- a/tmux.conf
+++ b/tmux.conf
@@ -27,7 +27,7 @@ set -g default-terminal "screen-256color"
 # set -g status-utf8 on
 
 
-set-window-option -g window-status-current-bg white
+# set-window-option -g window-status-current-bg white
 
 # Bind pane switching to VIM style keys
 bind h select-pane -L
